--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -75,8 +75,7 @@
     "        for i in range(num_row):\n",
     "            data[i][j] = (data[i][j] - mean[j])/std[j];\n",
     "            \n",
-    "    return data;\n",
-    "            "
+    "    return data;"
    ]
   },
   {
@@ -113,7 +112,7 @@
     "with open(input_path, 'r') as file:\n",
     "    reader = csv.reader(file);\n",
     "    data = np.array([row for row in reader]);\n",
-    "print data.shape\n"
+    "print data.shape"
    ]
   },
   {
@@ -180,7 +179,7 @@
     "print imposter_targets.shape;\n",
     "imposter_features = imposter[:, :, 3:];\n",
     "print imposter_features.shape;\n",
-    "# print np.concatenate((imposter_features[0:1], imposter_features[2:51])).reshape(250, 28);\n"
+    "# print np.concatenate((imposter_features[0:1], imposter_features[2:51])).reshape(250, 28);"
    ]
   },
   {
@@ -252,8 +251,7 @@
     "    \n",
     "#     print test_targets[0:400]\n",
     "        \n",
-    "    return train_targets, train_features, test_targets, test_features;\n",
-    "    "
+    "    return train_targets, train_features, test_targets, test_features;"
    ]
   },
   {
@@ -338,7 +336,7 @@
     "print (cross_validation.cross_val_score(clf, train_feature_two, train_target_two, cv=5));\n",
     "\n",
     "# for i in range(20):\n",
-    "#     print (clf.predict(test_data[i]), test_target[i]);\n"
+    "#     print (clf.predict(test_data[i]), test_target[i]);"
    ]
   },
   {
@@ -372,8 +370,7 @@
     "                                  180 + angle, color=color)\n",
     "        ell.set_clip_box(ax.bbox)\n",
     "        ell.set_alpha(0.5)\n",
-    "        ax.add_artist(ell)\n",
-    "        "
+    "        ax.add_artist(ell)"
    ]
   },
   {
@@ -510,8 +507,7 @@
     "    \n",
     "    plt.xticks(());\n",
     "    plt.yticks(());\n",
-    "    plt.title(name);\n",
-    "     "
+    "    plt.title(name);"
    ]
   },
   {
@@ -1187,8 +1183,7 @@
     "    K = Opt_K[covar_type];\n",
     "    n_components = Opt_n_components[covar_type];\n",
     "    parameters = {'n_components': n_components, 'covar_type': covar_type, 'K': K};\n",
-    "    return parameters;\n",
-    "                "
+    "    return parameters;"
    ]
   },
   {
@@ -1251,8 +1246,7 @@
     "    if(score < threshold):\n",
     "        return [False, score[0], threshold];\n",
     "    else:\n",
-    "        return [True, score[0], threshold];\n",
-    "    "
+    "        return [True, score[0], threshold];"
    ]
   },
   {
@@ -1536,11 +1530,10 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
     "%%html\n",
     "<head>\n",
     "    <meta http-equiv=\"Content-Type\" content=\"text/html; charset=ISO-8859-1\"/>\n",
@@ -1801,7 +1794,7 @@
     "#         i += 1;\n",
     "    \n",
     "    Feature.reverse();\n",
-    "    return Feature;\n"
+    "    return Feature;"
    ]
   },
   {
@@ -1913,8 +1906,7 @@
     "    result = make_Authentication(Profiles[Username]['Keystroke']['model'], \n",
     "                           Profiles[Username]['Keystroke']['threshold'],\n",
     "                           np.array(Feature_Vector).reshape(1,-1));\n",
-    "    return result;\n",
-    "    "
+    "    return result;"
    ]
   },
   {
@@ -2021,7 +2013,6 @@
     }
    ],
    "source": [
-    "\n",
     "## Generate the format of feature vector. We build the feature vector according to the format of CMU dataset (H, DD, UD...)\n",
     "## In the next step, we will calculate each feature's value and fill this vector with those values\n",
     "## \n",
@@ -2073,7 +2064,7 @@
     "    Feature_Vector[i] = (Feature_Vector[i]-global_Mean[i])/global_Std[i];\n",
     "        \n",
     "print \"Length of Feature Vector: \", len(Feature_Vector);\n",
-    "print Feature_Vector;\n"
+    "print Feature_Vector;"
    ]
   },
   {
@@ -2183,8 +2174,7 @@
     "    profiles.append(train_Model_GMM_LOOM(train_feature, 0.35, i));\n",
     "    print make_Authentication(profiles[i-45]['model'], profiles[i-45]['threshold'], np.array(Feature_Vector).reshape(1, -1));\n",
     "    print \"genuine test:\", make_Authentication(profiles[i-45]['model'], profiles[i-45]['threshold'], \n",
-    "                                               np.array(test_feature[i]).reshape(1, -1));\n",
-    "    "
+    "                                               np.array(test_feature[i]).reshape(1, -1));"
    ]
   }
  ],
@@ -2202,7 +2192,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
