--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -814,7 +814,8 @@
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
