--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -606,8 +606,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -878,66 +877,52 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "scrolled": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing on User:  0\n",
-      "sklearn.cross_validation.KFold(n=400, n_folds=2, shuffle=True, random_state=None)\n",
-      "Size of trainSet:  100\n",
-      "Size of imposterSet:  2500\n",
-      "Covar_type:  diag\n",
-      "Time interval:  30.5550691271\n",
-      "Processing on User:  1\n",
-      "sklearn.cross_validation.KFold(n=400, n_folds=2, shuffle=True, random_state=None)\n",
-      "Size of trainSet:  100\n",
-      "Size of imposterSet:  2500\n",
-      "Covar_type:  diag\n",
-      "Time interval:  31.2742182817\n",
-      "Processing on User:  2\n",
-      "sklearn.cross_validation.KFold(n=400, n_folds=2, shuffle=True, random_state=None)\n",
-      "Size of trainSet:  100\n",
-      "Size of imposterSet:  2500\n",
-      "Covar_type:  diag\n",
-      "Time interval:  29.9698607194\n",
-      "Processing on User:  3\n",
-      "sklearn.cross_validation.KFold(n=400, n_folds=2, shuffle=True, random_state=None)\n",
-      "Size of trainSet:  100\n",
-      "Size of imposterSet:  2500\n",
-      "Covar_type:  diag\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random;\n",
     "from time import clock;\n",
     "\n",
-    "user_range = range(0,50) ##  range of user. Totally 51 users\n",
-    "n_components_range = range(1, 50); ## num_components: 1~50\n",
+    "## function criterion: computer a parameter with FAR and FRR. The value is smaller, the result is better\n",
+    "def criterion(FAR, FRR):\n",
+    "    cri_value = [];\n",
+    "    for i in range(len(FAR)):\n",
+    "        cri_value.append(FAR[i]*.6 + FRR[i]*.4);\n",
+    "        \n",
+    "    opt_value = min(cri_value);\n",
+    "    opt_pos = cri_value.index(opt_value);\n",
+    "    return opt_pos;\n",
+    "\n",
+    "user_range = range(0,51) ##  range of user. Totally 51 users\n",
+    "\n",
+    "## Those users have bad performance in previous experiments\n",
+    "unnormal_user = [10,11,12,15,16,23,24,25,26,27,28,32,39,40,42,44,45,47];\n",
+    "# unnormal_user = [10];\n",
+    "\n",
+    "K = 0.8;\n",
+    "K_list = [0.25, 0.5, 0.75, 1.00, 1.25, 1.5, 1.75, 2.00]; ## To see how different K inffect the FAR and FRR\n",
+    "# K_list = [0.25, 0.5, 0.75, 1.00];\n",
+    "\n",
+    "n_components_range = range(1, 51); ## num_components: 1~50\n",
     "K_range = np.arange(0.01, 2.01, 0.02); ## 0.01~1.99, variance is 0.02\n",
     "# covariances=['spherical', 'diag', 'full', 'tied'];\n",
     "\n",
     "## For debug\n",
-    "color_rate = [['k', 'c']];\n",
+    "color_rate = [['k', 'c'], ['r','b'], ['m', 'g'], ['y', 'w']];\n",
     "color_list = ['k'];\n",
     "covariances = ['diag']; \n",
     "\n",
-    "Opt_n_components = dict((covar_type, []) for covar_type in covariances);\n",
-    "Opt_FAR = dict((covar_type, []) for covar_type in covariances);\n",
-    "Opt_FRR = dict((covar_type, []) for covar_type in covariances);\n",
-    "K = 0.8;\n",
-    "K_list = [0.25, 0.5, 1.00, 1.25, 1.5, 1.75, 2.00];\n",
+    "Opt_n_components = dict((K, dict((covar_type, []) for covar_type in covariances)) for K in K_list);\n",
+    "Opt_FAR = dict((K, dict((covar_type, []) for covar_type in covariances)) for K in K_list);\n",
+    "Opt_FRR = dict((K, dict((covar_type, []) for covar_type in covariances)) for K in K_list);\n",
     "\n",
     "#### User Loop\n",
-    "for index_user in user_range: ## Try the first 10 user\n",
+    "for index_user in unnormal_user: ## Try the unnormal users\n",
     "    print 'Processing on User: ', index_user;\n",
     "    \n",
-    "    plt.figure(figsize=(14,10)); ## One picture per user\n",
-    "    plt.title(\"FAR & FRR Estimation for User \" + str(index_user));\n",
+    "#     plt.figure(figsize=(14,10)); ## One picture per user\n",
+    "#     plt.title(\"FAR & FRR Estimation for User \" + str(index_user));\n",
     "\n",
     "    trainTarget, trainSet, testTarget, testSet = pre_process(data_user[index_user], 2, True);\n",
     "    ## Choose 50 users randomly as the training set\n",
@@ -953,106 +938,122 @@
     "    loo = cross_validation.LeaveOneOut(len(trainSet)); ## LOOM method iterator\n",
     "    \n",
     "    # Grid search on K, covar_type, n_components (Implemented by myself)\n",
-    "    #### Covar_type Loop\n",
-    "    for index_covar, (covar_type, color) in enumerate(zip(covariances, color_list)):\n",
-    "        print \"Covar_type: \", covar_type;\n",
-    "        EER = np.array([]);\n",
-    "        FAR, FRR, Dis =[], [], [];\n",
-    "        opt_pos, min_err = 0, np.infty;\n",
-    "        start = clock();\n",
+    "    ### K Loop\n",
+    "    start = clock();\n",
+    "    for k_index, k_loom in enumerate(K_list):\n",
     "        \n",
-    "        #### n_components Loop\n",
-    "        for num_components in n_components_range:\n",
-    "            model = GMM(n_components=num_components, covariance_type=covar_type, init_params='wc', n_iter=20);\n",
-    "            min_dis = np.infty; ## distance between FAR & FRR\n",
+    "        plt.figure(figsize=(14,10)); ## One picture per user\n",
+    "        plt.title(\"FAR & FRR Estimation for User \" + str(index_user) + \" K_LOOM: \"+ str(k_loom));\n",
+    "        ### Covar_type Loop\n",
+    "        for index_covar, (covar_type, color) in enumerate(zip(covariances, color_list)):\n",
+    "            print \"Covar_type: \", covar_type;\n",
+    "            EER = np.array([]);\n",
+    "            FAR, FRR, Dis = [], [], [];\n",
+    "            opt_pos, min_err = 0, np.infty;\n",
+    "\n",
+    "            ### n_components Loop\n",
+    "            for num_components in n_components_range:\n",
+    "                model = GMM(n_components=num_components, covariance_type=covar_type, init_params='wc', n_iter=20);\n",
+    "                min_dis = np.infty; ## distance between FAR & FRR \n",
+    "\n",
+    "                ## LOOM Method\n",
+    "                Scores = [];\n",
+    "                for train_index, test_index in loo:\n",
+    "                    train, test = trainSet[train_index], trainSet[test_index];\n",
+    "                    model.fit(train);\n",
+    "                    Scores.append(model.score(test));\n",
+    "\n",
+    "                model.fit(trainSet);\n",
+    "                Scores = np.array(Scores).ravel();\n",
+    "                mean = np.mean(Scores);\n",
+    "                std = np.std(Scores);\n",
+    "\n",
+    "                scores_imposter = [model.score(imposter_user[i].reshape(1,-1)) for i in range(len(imposter_user))];\n",
+    "                scores_genuine = [model.score(genuine_user[i].reshape(1,-1)) for i in range(len(genuine_user))];\n",
+    "\n",
+    "                # Evalutation of the model\n",
+    "                Seq = [Scores[j] for j in range(len(Scores)) if abs(Scores[j] - mean) < k_loom*std];\n",
+    "                if(not Seq):\n",
+    "                    threshold_user = mean - k_loom*std;\n",
+    "                else:\n",
+    "                    threshold_user = min(Seq);\n",
+    "\n",
+    "                reject, accept = 0, 0;\n",
+    "                ## imposter test\n",
+    "                for i in range(len(scores_imposter)):\n",
+    "                    if(scores_imposter[i] >= threshold_user):\n",
+    "                         accept = accept+1;\n",
+    "\n",
+    "                ## genuine test    \n",
+    "                for i in range(len(scores_genuine)):\n",
+    "                    if(scores_genuine[i] < threshold_user):\n",
+    "                        reject = reject+1;\n",
+    "\n",
+    "                far = (float(accept)/float(len(scores_imposter)));\n",
+    "                frr = (float(reject)/float(len(scores_genuine)));\n",
+    "\n",
+    "                FAR.append(far); FRR.append(frr); Dis.append(abs(far-frr));\n",
+    "\n",
+    "            #### End of n_components Loop\n",
+    "\n",
+    "            ## Find the optimal point: Find the 5 smallest FAR points,\n",
+    "            ## and choose the one who has the lowest FRR as the optimal\n",
+    "    #         index_close = np.argsort(FAR)[:5];\n",
+    "    #         opt_pos = FRR.index(min(np.array(FRR)[index_close]));\n",
+    "            opt_pos = criterion(FAR, FRR);\n",
+    "\n",
+    "            Opt_FAR[k_loom][covar_type].append(FAR[opt_pos]);\n",
+    "            Opt_FRR[k_loom][covar_type].append(FRR[opt_pos]);\n",
     "            \n",
-    "            ## LOOM Method\n",
-    "            Scores = [];\n",
-    "            for train_index, test_index in loo:\n",
-    "                train, test = trainSet[train_index], trainSet[test_index];\n",
-    "                model.fit(train);\n",
-    "                Scores.append(model.score(test));\n",
+    "            ## The n_components of the model under this cover_type with best performance under our criterion\n",
+    "            Opt_n_components[k_loom][covar_type].append(opt_pos+1); \n",
     "\n",
-    "            model.fit(trainSet);\n",
-    "            Scores = np.array(Scores).ravel();\n",
-    "            mean = np.mean(Scores);\n",
-    "            std = np.std(Scores);\n",
+    "            plt.plot(n_components_range, FAR, '--', color=color_rate[index_covar][0], label=covar_type+\" FAR\");\n",
+    "            plt.plot(n_components_range, FRR, '--', color=color_rate[index_covar][1], label=covar_type+\" FRR\");\n",
+    "            plt.text(opt_pos, -0.05, 'Optimal: '+str(opt_pos+1)\n",
+    "                     +' FAR: '+str(FAR[opt_pos])+' FRR: '+str(FRR[opt_pos]), color = color);\n",
     "\n",
-    "            scores_imposter = [model.score(imposter_user[i].reshape(1,-1)) for i in range(len(imposter_user))];\n",
-    "            scores_genuine = [model.score(genuine_user[i].reshape(1,-1)) for i in range(len(genuine_user))];\n",
-    "            \n",
-    "            #Evalutation of the model\n",
-    "            ## K Loop\n",
-    "            Seq = [Scores[j] for j in range(len(Scores)) if abs(Scores[j] - mean) < K*std];\n",
-    "            if(not Seq):\n",
-    "                threshold_user = mean - K*std;\n",
-    "            else:\n",
-    "                threshold_user = min(Seq);\n",
-    "\n",
-    "            reject, accept = 0, 0;\n",
-    "            ## imposter test\n",
-    "            for i in range(len(scores_imposter)):\n",
-    "                if(scores_imposter[i] >= threshold_user):\n",
-    "                     accept = accept+1;\n",
-    "\n",
-    "            ## genuine test    \n",
-    "            for i in range(len(scores_genuine)):\n",
-    "                if(scores_genuine[i] < threshold_user):\n",
-    "                    reject = reject+1;\n",
-    "                        \n",
-    "            far = (float(accept)/float(len(scores_imposter)));\n",
-    "            frr = (float(reject)/float(len(scores_genuine)));\n",
-    "            \n",
-    "            FAR.append(far); FRR.append(frr); Dis.append(abs(far-frr));\n",
-    "            \n",
+    "        #### End of covar_type Loop    \n",
+    "        plt.xlabel(\"Num_components\");\n",
+    "        plt.ylabel(\"FAR & FRR\");\n",
+    "        plt.ylim(ymin=-0.1, ymax = 1.0);\n",
+    "        plt.legend(loc='upper left');\n",
     "        \n",
-    "        #### End of n_components Loop\n",
-    "        finish = clock();\n",
-    "        print \"Time interval: \", finish-start;\n",
-    "        \n",
-    "        ## Find the optimal point: Find the 5 smallest FAR points,\n",
-    "        ## and choose the one who has the lowest FRR as the optimal\n",
-    "        index_close = np.argsort(FAR)[:5];\n",
-    "        opt_pos = FRR.index(min(np.array(FRR)[index_close]));\n",
-    "        \n",
-    "        \n",
-    "        Opt_FAR[covar_type].append(FAR[opt_pos]);\n",
-    "        Opt_FRR[covar_type].append(FRR[opt_pos]);\n",
-    "        \n",
-    "        Opt_n_components[covar_type].append(opt_pos+1); ## The n_components of the model under this cover_type with minimal EER\n",
-    "        \n",
-    "        plt.plot(n_components_range, FAR, '--', color=color_rate[index_covar][0], label=covar_type+\" FAR\");\n",
-    "        plt.plot(n_components_range, FRR, '--', color=color_rate[index_covar][1], label=covar_type+\" FRR\");\n",
-    "        plt.text(opt_pos, -0.05, 'Optimal: '+str(opt_pos+1)\n",
-    "                 +' FAR: '+str(FAR[opt_pos])+' FRR: '+str(FRR[opt_pos]), color = color);\n",
-    "\n",
-    "    #### End of covar_type Loop    \n",
-    "    plt.xlabel(\"Num_components\");\n",
-    "    plt.ylabel(\"FAR & FRR\");\n",
-    "    plt.ylim(ymin=-0.1, ymax = 1.0);\n",
-    "    plt.legend(loc='upper left');\n",
-    "\n",
+    "    #### End of K Loop\n",
+    "    finish = clock();\n",
+    "    print \"Time interval: \", finish-start;\n",
+    "    \n",
     "#### End of User Loop\n",
     "\n",
     "## Show the optimal result of different Users\n",
-    "plt.figure(figsize=(10, 10));\n",
-    "bars_far = [];\n",
-    "bars_frr = [];\n",
-    "for index_covar, (covar_type, color) in enumerate(zip(covariances, color_list)):\n",
-    "    xpos = np.array(user_range)+.2*index;\n",
-    "    bars_far.append(plt.bar(xpos, Opt_FAR[covar_type], width=.2, \n",
-    "                            color=color_rate[index_covar][0], label=covar_type+\" FAR\"));\n",
-    "    bars_frr.append(plt.bar(xpos+.2, Opt_FRR[covar_type], width=.2, \n",
-    "                            color=color_rate[index_covar][1], label=covar_type+\" FRR\"));\n",
+    "for k_index, k_loom in enumerate(K_list):\n",
+    "    plt.figure(figsize=(12, 6));\n",
+    "    spl_1 = plt.subplot(1,2,1);\n",
+    "    plt.title(\"Opt FAR&FRR of Different Users. K_LOOM: \"+str(k_loom));\n",
+    "    plt.xlabel(\"User Index\");\n",
+    "    plt.ylabel(\"FAR & FRR\");\n",
+    "    plt.legend(loc='upper right');\n",
+    "    plt.ylim(ymin=-0.1, ymax = 1.0);\n",
     "    \n",
-    "    for i in range(len(xpos)):\n",
-    "        plt.text(xpos[i], -0.05, 'num_Com: '+str(Opt_n_components[covar_type][i]), fontsize=14);\n",
+    "    ## Draw the optimal num_components with different users\n",
+    "    spl_2 = plt.subplot(1,2,2);\n",
+    "    plt.title(\"Num_components of Different Users. K_LOOM: \"+str(k_loom));\n",
+    "    plt.ylabel(\"Num_components\");\n",
+    "    plt.xlabel(\"User Index\");\n",
+    "    \n",
+    "    plt.subplots_adjust(bottom=.1, top=0.95, hspace=.3, wspace=.3, left=.01, right=.99);\n",
+    "    bars_far, bars_frr, bars_components = [], [], [];\n",
     "\n",
-    "plt.title(\"FAR&FRR with different num_components with the same K_LOOM of Different Users\");\n",
-    "plt.xlabel(\"User Index\");\n",
-    "plt.ylabel(\"FAR & FRR\");\n",
-    "plt.ylim(ymin=-0.1, ymax = 1.0);\n",
-    "plt.legend(loc='upper right');"
+    "    for index_covar, (covar_type, color) in enumerate(zip(covariances, color_list)):\n",
+    "        xpos = np.array(range(len(unnormal_user)))+.2*index_covar;\n",
+    "#         xpos = np.array(user_range)+.2*index_covar;\n",
+    "        bars_far.append(spl_1.bar(xpos, Opt_FAR[k_loom][covar_type], width=.2, \n",
+    "                                color=color_rate[index_covar][0], label=covar_type+\" FAR\"));\n",
+    "        bars_frr.append(spl_1.bar(xpos+.2, Opt_FRR[k_loom][covar_type], width=.2, \n",
+    "                                color=color_rate[index_covar][1], label=covar_type+\" FRR\"));\n",
+    "        \n",
+    "        bars_components.append(spl_2.bar(xpos, Opt_n_components[k_loom][covar_type], width=.2, \n",
+    "                                color=color_rate[index_covar][0], label=covar_type+\" Num_Com\"));\n"
    ]
   },
   {
